changed backend to quarkus and configured javalin for data processing